# pentobi

./: CMakeLists.txt  Dockerfile  docker-compose.yml
examples/: CMakeLists.txt  test.cpp  test2.cpp  test3.cpp  test4.cpp  turnbase_pentobi.h
libboardgame_mcts/: SearchBase.h
libpentobi_mcts/: Player.cpp  Search.cpp  Search.h
pybind/: CMakeLists.txt  cached_moves.cpp  cached_moves.h  crash_handler.cpp  crash_handler.h  logger.cpp  logger.h  main.cpp  move_convert.cpp  move_convert.h  pentobi_engine.cpp  pentobi_engine.h  pentobiengine.cpp  server.cpp  server.h  socketserver.cpp  validation.cpp  validation.h
